[project]
name = "uvexamplepkg1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.1.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"


[project.optional-dependencies]
plotting = [
    "matplotlib>=3.9.2",
    "pyqt5>=5.15.11",
]
